# rust-microservice

./: .env  Cargo.toml  Dockerfile  README.md
docker-compose/: docker-compose.yaml  postgres-initdb.sh
istio/: gateway.yaml  rust-microservice-svc.yaml  rust-microservice-virtualservice.yaml  rust-microservice.yaml  serviceentry.yaml
public/: index.html
src/: main.rs  models.rs  routes.rs
