[package]
name = "rust-microservice"
version = "0.1.0"
authors = ["woodsmur <woodsmur@mur>"]

[dependencies]
diesel = { version = "1.2.2", features = ["postgres"] }
dotenv = "0.11.0"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
getopts = "0.2"
error-chain = "0.12"
hyper = "0.12"
hyper-native-tls = "0.2"
hyper-tls = "0.3"
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rand = "*"
structopt-derive = "0.2.10"
log = "0.4.5"
loggerv = "0.7.1"
structopt = "0.2.10"
rocket = "0.3.16"
rocket_codegen = "0.3.16"
rocket_contrib = { version = "*", default-features = false, features = ["json"] }
